# deep-translator

./: MANIFEST.ini  README.md  pyproject.toml
experiments/: __init__.py  inspect_translations.py  pivot_translator.py  plot_attention.py  plots.py  spacy_taggers.py  train_translator.py  train_word2vec.py
results/embeddings/de/: log.txt
results/embeddings/en/: log.txt
src/translator/: __init__.py  _translator.py  datasets.py  language.py  models.py  preprocessing.py  tokenizers.py  trainer.py
src/translator/nn/: __init__.py  attention.py  decoder.py  encoder.py  module.py  seq2seq.py  utils.py
src/translator/utils/: download.py  torch.py
tests/: conftest.py  test_datasets.py  test_language.py  test_preprocessing.py  test_tokenizers.py  test_trainer.py  test_version.py
tests/resources/: europarl_small.de
