[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translator"
version = "0.0.1"
authors = [
    { name = "Conrad Dobberstein" },
    { name = "Georgios Zountsas" },
]
description = "Deep Neural Machine Translation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = ["natural language processing", "machine translation", "deep learning"]
dependencies = [
    "numpy~=2.0.0",
    "regex==2024.5.15",
    "sacremoses~=0.1.0",
    "torch~=2.3.0",
    "tqdm~=4.66.0",
]

[project.urls]
"Repository" = "https://github.com/dobbersc/deep-translator"

[project.optional-dependencies]
dev = [
    "black~=24.4.0",
    "mypy~=1.10.0",
    "pytest~=8.2.0",
    "pytest-cov~=5.0.0",
    "ruff~=0.5.0",
    # Type stubs
    "types-regex",
    "types-tqdm"
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = "sacremoses.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=translator --cov-config pyproject.toml"
testpaths = ["tests"]

[tool.coverage.report]
# Selection from https://coverage.readthedocs.io/en/stable/excluding.html#advanced-exclusion
exclude_also = [
    'def __repr__',
    'if TYPE_CHECKING:',
    '@(typing\.)?overload',
    '@(abc\.)?abstractmethod',
    'class .*\bProtocol\):',
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests", "experiments"]
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    # "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    # "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    # "CPY",
    "C4",
    "DTZ",
    "T10",
    # "DJ",
    "EM",
    "EXE",
    # "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    # "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    # "TD",
    # "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    # "FURB",
    "RUF",
]

ignore = [
    "S101", # Do not remove assertions
    "S105", # Possible hardcoded password assigned (S105-S1007)
    "S106",
    "S107",
    "D100", # Don't force presence of docstrings (D100-D107)
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "PLR0913", # Too many arguments in function definition
]

unfixable = [
    "ERA", # Do not delete commented code
    "EXE001", # Do not check python files for executability, doesn't work well on windows
    "EXE002", # Do not check python files for executability, doesn't work well on windows
    "F841", # Do not remove unused variables automatically
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
forced-separate = ["translator", "tests", "experiments"]
